# contraction_controller_px4

./: .gitignore  .gitmodules  Makefile  README.md  hw_commands.md  package.xml  setup.py  sim_commands.md
contraction_controller_px4/: controller.py  ros2px4_node.py  run_node.py
docker/: Dockerfile  makefile  requirements.txt
docs/: contraction_controller.html  contraction_controller.qmd  headless_px4_docker_architecture.html  headless_px4_docker_architecture.qmd  newton_raphson_workshop_profiles.html  newton_raphson_workshop_profiles.qmd  pre_fig8_regular_trajectory_matrix.html  pre_fig8_regular_trajectory_matrix.qmd
docs/qmd/: docker_container_deep_dive.qmd  headless_px4_docker_architecture.qmd  newton_raphson_math_code_walkthrough.qmd  newton_raphson_workshop_profiles.qmd  pre_fig8_regular_trajectory_matrix.qmd  render_pdfs.sh
src/: Agents.md
src/Controller 1/Controller/: ix_ut.npy
src/contraction_controller_px4/: package.xml  setup.cfg  setup.py
src/controller_params/: model.eqx
src/data_analysis/: Analysis_Fig8Controllers.ipynb  Analysis_HoverMode1.ipynb  Analysis_Spiral.ipynb  Analysis_Trefoil.ipynb  Compare_Fig8Heading.ipynb  Compare_FigureEight.ipynb  Compare_Spiral.ipynb  Compare_Trefoil.ipynb  LogComparison.ipynb  run_analysis.py  test_plots_traj.ipynb  test_plots_traj_updated.ipynb  test_plots_traj_updated_fixed_trefoil.ipynb  utilities.py
src/ff_f8_px4/: README.md  package.xml  setup.py
src/newton_raphson_enhanced_px4_cpp/: CMakeLists.txt  README.md  commands.md  package.xml  test_hardware_commands.md  test_sim_commands.md
src/newton_raphson_px4/: package.xml
src/newton_raphson_px4_cpp/: CMakeLists.txt  README.md  commands.md  package.xml  test_hardware_commands.md  test_sim_commands.md
src/nmpc_acados_px4/: .gitignore  README_old.md  package.xml  setup.cfg  setup.py
src/nr_diff_flat_px4_cpp/: CMakeLists.txt  README.md  commands.md  package.xml  test_hardware_commands.md  test_sim_commands.md
src/nr_diff_flat_px4_cpp/include/nr_diff_flat_px4_cpp/: offboard_control_node.hpp
src/nr_diff_flat_px4_cpp/include/nr_diff_flat_px4_cpp/controller/: newton_raphson.hpp  nr_utils.hpp
src/nr_diff_flat_px4_cpp/include/nr_diff_flat_px4_cpp/px4_utils/: core_funcs.hpp  flight_phases.hpp
src/nr_diff_flat_px4_cpp/include/nr_diff_flat_px4_cpp/transformations/: adjust_yaw.hpp
src/nr_diff_flat_px4_cpp/src/: offboard_control_node.cpp  run_node.cpp
src/nr_diff_flat_px4_cpp/src/controller/: newton_raphson.cpp  nr_utils.cpp
src/quad_contraction_trajs/: package.xml  setup.cfg  setup.py
src/workspace_tools/: fly_pipeline.py  plot_agents_matrix.py  plot_pre_fig8_matrix.py  run_agents_matrix.py  run_pre_fig8_matrix.py
writeup/: latest_batch_summary.json  workspace_structure_summary.html  workspace_structure_summary.qmd
(+79 files in other folders)
