<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nr_diff_flat_px4_cpp</name>
  <version>0.1.0</version>
  <description>C++ Newton-Raphson Standard controller for PX4 quadrotor</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>eigen</depend>
  <depend>quad_platforms_cpp</depend>
  <depend>quad_trajectories_cpp</depend>
  <depend>ros2_logger_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
